--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="utf-8" />
+		<meta charset='utf-8' />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
 		<title>Burnham & Marvin Repair and Stuff</title>
-	</head>
+
+		<script src='js/jquery-3.2.1.min.js'></script>
+		<script src='js/bootstrap.min.js'></script>
+
+		<link href='css/bootstrap.min.css' rel='stylesheet' type='text/css' />
+	</head>	
+	<body>
+		
+	</body>
 </html>
