--- a/index.html
+++ b/index.html
@@ -11,8 +11,52 @@
 		<script src='js/bootstrap.min.js'></script>
 
 		<link href='css/bootstrap.min.css' rel='stylesheet' type='text/css' />
+		<link href='css/main.css' rel='stylesheet' type='text/css' />
 	</head>	
 	<body>
-		
+		<nav class='navbar navbar-fixed-top'>
+			<div class='container-fluid'>
+				<div class='container'>
+					<div class='navbar-header'>
+						<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#my-navbar">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class='navbar-brand' href='index.html'><img id='logo' src='images/logo.jpg' alt='Burnham' /></a>
+					</div>
+					<div class='collapse navbar-collapse' id='my-navbar'>
+						<ul class='nav navbar-nav navbar-right hidden-xs hidden-sm'>
+							<li>
+                <a class="nav-btn" href="#">About</a>
+              </li>
+              <li>
+                <a class="nav-btn" href="#">Services</a>
+              </li>
+              <li>
+                <a class="nav-btn" href="#">Reviews</a>
+              </li>
+              <li>
+                <a class="nav-btn" href="#">Contact</a>
+              </li>
+						</ul>
+						<ul class="nav navbar-nav visible-xs visible-sm">
+							<li>
+                <a class="nav-btn" href="#">About</a>
+              </li>
+              <li>
+                <a class="nav-btn" href="#">Services</a>
+              </li>
+              <li>
+                <a class="nav-btn" href="#">Reviews</a>
+              </li>
+              <li>
+                <a class="nav-btn" href="#">Contact</a>
+              </li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</nav>
 	</body>
 </html>
