Navbar Initial Formatting Started

--- a/index.html
+++ b/index.html
@@ -1,57 +1,58 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 	<head>
 		<meta charset='utf-8' />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta http-equiv='X-UA-Compatible' content='IE=edge' />
+    <meta name='viewport' content='width=device-width, initial-scale=1' />
 
 		<title>Burnham & Marvin Repair and Stuff</title>
 
 		<script src='js/jquery-3.2.1.min.js'></script>
 		<script src='js/bootstrap.min.js'></script>
 
-		<link href='css/bootstrap.min.css' rel='stylesheet' type='text/css' />
-		<link href='css/main.css' rel='stylesheet' type='text/css' />
+		<link href='css/bootstrap.min.css' rel='stylesheet' />
+		<link href='https://fonts.googleapis.com/css?family=Open+Sans|Oswald|Roboto|Ubuntu+Condensed' rel='stylesheet' />
+		<link href='css/main.css' rel='stylesheet' />
 	</head>	
 	<body>
 		<nav class='navbar navbar-fixed-top'>
 			<div class='container-fluid'>
 				<div class='container'>
 					<div class='navbar-header'>
-						<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#my-navbar">
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
+						<button type='button' class='navbar-toggle' data-toggle='collapse' data-target='#my-navbar'>
+              <span class='icon-bar'></span>
+              <span class='icon-bar'></span>
+              <span class='icon-bar'></span>
             </button>
-            <a class='navbar-brand' href='index.html'><img id='logo' src='images/logo.jpg' alt='Burnham' /></a>
+            <a class='navbar-brand' href='index.html'>Burnham's PC Repair</a>
 					</div>
 					<div class='collapse navbar-collapse' id='my-navbar'>
 						<ul class='nav navbar-nav navbar-right hidden-xs hidden-sm'>
 							<li>
-                <a class="nav-btn" href="#">About</a>
+                <a class='nav-btn' href='#'>About</a>
               </li>
               <li>
-                <a class="nav-btn" href="#">Services</a>
+                <a class='nav-btn' href='#'>Services</a>
               </li>
               <li>
-                <a class="nav-btn" href="#">Reviews</a>
+                <a class='nav-btn' href='#'>Reviews</a>
               </li>
               <li>
-                <a class="nav-btn" href="#">Contact</a>
+                <a class='nav-btn' href='#'>Contact</a>
               </li>
 						</ul>
-						<ul class="nav navbar-nav visible-xs visible-sm">
+						<ul class='nav navbar-nav visible-xs visible-sm'>
 							<li>
-                <a class="nav-btn" href="#">About</a>
+                <a class='nav-btn' href='#'>About</a>
               </li>
               <li>
-                <a class="nav-btn" href="#">Services</a>
+                <a class='nav-btn' href='#'>Services</a>
               </li>
               <li>
-                <a class="nav-btn" href="#">Reviews</a>
+                <a class='nav-btn' href='#'>Reviews</a>
               </li>
               <li>
-                <a class="nav-btn" href="#">Contact</a>
+                <a class='nav-btn' href='#'>Contact</a>
               </li>
 						</ul>
 					</div>
